--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button id="cases-button">Skrzynie</button>
         <button id="inventory-button">Ekwipunek</button>
         <button id="upgrader-button">Upgrader</button>
+        <button id="shop-button">Sklep</button>
         <button id="all-skins-button">Wszystkie Skins</button>
     </nav>
 
@@ -35,6 +36,17 @@
 
     <section id="upgrader-section">
         <div id="upgrade-options"></div>
+        <div id="selected-skins"></div>
+        <div id="upgrade-multipliers">
+            <button class="upgrade-multiplier" data-multiplier="1.5">1.5x</button>
+            <button class="upgrade-multiplier" data-multiplier="2">2x</button>
+            <button class="upgrade-multiplier" data-multiplier="3">3x</button>
+            <button class="upgrade-multiplier" data-multiplier="5">5x</button>
+        </div>
+    </section>
+
+    <section id="shop-section">
+        <div id="shop"></div>
     </section>
 
     <section id="all-skins-section">
